--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,19 @@
 body, html{
 	font-family: 'Montserrat', sans-serif;
 	color:#a3d3c6;
+    background-color: #f6ffff;
+    font-weight: bold;
 }
 .clear{
 	clear: both;
 }
- 
+.jumbotron{
+    box-shadow: 10px 10px 5px grey;
+}
+    .jumbotron h1{
+        text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+        box-shadow: 10px 10px 5px grey;
+    }
 h1{
 	padding: 10px;
     border: 1px solid;
@@ -16,6 +24,26 @@ img.media-object{
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+p {
+    color: #82A99E;
+    text-shadow: 1px 1px #383838;
+    font-style: italic;
+}
+ul.list-unstyled{
+    list-style-type: none;
+    box-shadow: 8px 8px 5px grey;
+    border: 1px solid #C1CAC7;
+    color: #82A99E;
+    font-size: 115%;
+    padding: 15px;
+    margin: 10px;
+}
+h3 {
+   color: #82A99E;
+   text-shadow: 1px 1px 1px #303030; 
+   border-top: 0;
+   padding-top: 0;
 }
 .container{
 	max-width: 600px;
